# dioxus-clerk

./: .env.dist  .gitignore  CONTEXT.md  Cargo.toml  README.md  build.rs  dagger.toml  deny.toml  devenv.nix  rust-toolchain.toml  webdriver.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  dagger-demo.yaml  dagger.yaml  demo.yaml  deploy.yaml
demo/: .env.dist  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  dagger-module.toml  dagger.dang  dagger.toml  package-lock.json  package.json  style.css  wrangler.toml
demo/src/: app.rs  components.rs  examples.rs  lib.rs  main.rs  pages.rs  server_api.rs  style.css  ui.rs  worker.rs
demo/src/components/: clerk.rs  code.rs  common.rs  examples.rs  layout.rs  mod.rs  nav.rs
demo/src/examples/: buttons.rs  embedded_signin.rs  embedded_signup.rs  errors.rs  gating.rs  hooks.rs  imperative.rs  minimal.rs  mod.rs  org_create.rs  org_list.rs  org_profile.rs  org_protect.rs  org_switcher.rs  organizations.rs  profile.rs  profile_avatar.rs  profile_button.rs  profile_embedded.rs  reverification.rs  server_call.rs  session_tasks.rs  waitlist.rs
demo/src/pages/: advanced.rs  basics.rs  legal.rs  mod.rs  orgs.rs  server.rs  widgets.rs
src/: actions.rs  bindings.rs  bridge.rs  components.rs  context.rs  core.rs  handle.rs  hooks.rs  lib.rs  lifecycle.rs  loader.rs  options.rs  prelude.rs  publishable_key.rs  reverification.rs  server.rs  ssr.rs  ssr_document.rs  startup.rs
src/components/: button_host.rs  button_mode.rs  control.rs  create_organization.rs  organization_list.rs  organization_profile.rs  organization_switcher.rs  protect.rs  provider.rs  redirect.rs  sign_in.rs  sign_in_button.rs  sign_out_button.rs  sign_up.rs  sign_up_button.rs  signed_in.rs  signed_out.rs  task_setup_mfa.rs  user_avatar.rs  user_button.rs  user_profile.rs  waitlist.rs  widget.rs
src/core/: auth_state.rs  claims.rs  error.rs  reverification.rs  state.rs  verification.rs
src/core/state/: tests.rs
src/server/: claims.rs  config.rs  context.rs  extractor.rs  layer.rs  ssr.rs  verification.rs
src/server/verification/: credentials.rs  jwks.rs  jwt.rs
tests/: components_user_avatar.rs  core_claims.rs  core_error.rs  core_public_interface.rs  core_reverification.rs  core_verification.rs  public_interface.rs  server_extractor.rs  server_from_env.rs  server_layer.rs  server_public_interface.rs  server_ssr.rs  ssr.rs  ssr_provider.rs  ssr_provider_no_server.rs  wasm_bridge.rs  wasm_lifecycle.rs  wasm_mounted_ui.rs  wasm_support.rs
tests/fixtures/: gen_keys.sh  test_jwks.json  test_priv.pem  test_pub.pem
tests/support/: auth.rs
