[package]
name = "demo"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
web = ["dep:dioxus-code", "dep:gloo-net", "dioxus/launch", "dioxus/web"]
fullstack-web = ["dioxus/fullstack", "web"]
server = [
    "dep:axum",
    "dep:dioxus-code",
    "dep:dioxus-server",
    "dep:tokio",
    "dioxus-clerk/server",
    "dioxus/fullstack",
    "dioxus/server",
]
worker = [
    "dep:axum",
    "dep:serde_json",
    "dep:tower-service",
    "dep:worker",
    "dep:worker-macros",
    "dioxus-clerk/worker",
]

[dependencies]
dioxus-clerk = { path = ".." }

axum = { version = "0.8", default-features = false, features = ["json"], optional = true }
dioxus = { version = "0.7", default-features = false, features = [
    "asset",
    "document",
    "hooks",
    "html",
    "macro",
    "router",
    "signals",
] }
dioxus-code = { version = "0.1.2", optional = true }
dioxus-server = { version = "0.7", optional = true }
gloo-net = { version = "0.6", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tower-service = { version = "0.3", optional = true }
worker = { version = "0.8", features = ["http", "axum"], optional = true }
worker-macros = { version = "0.8", features = ["http"], optional = true }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[workspace]
